final picture edits, fix spacing

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -170,7 +170,6 @@ section ul li {
 
 section p {
     padding: .5rem;
-    margin-top: 1rem;
     line-height: 180%;
 }
 
